--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-joyride": "^2.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
